--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,8 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
-
-                android:src="@drawable/calculator2screen"
+                android:src="@drawable/nav_head_main_pic"
                 android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.Toolbar
@@ -42,11 +41,11 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="88dp"
-                    android:layout_height="88dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:contentDescription="@string/nav_header_desc"
                     android:paddingTop="@dimen/nav_header_vertical_spacing"
-                    app:srcCompat="@mipmap/ic_launcher_round" />
+                    app:srcCompat="@drawable/icon2" />
 
                 <TextView
                     android:layout_width="match_parent"
