--- a/app/src/main/res/layout/fragment_mathformula.xml
+++ b/app/src/main/res/layout/fragment_mathformula.xml
@@ -130,7 +130,10 @@
                         android:id="@+id/txtres"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textMultiLine" />
+                        android:layout_margin="5dp"
+                        android:inputType="textMultiLine"
+                        android:textColor="@color/actfeedback"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
             </LinearLayout>
