--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -44,140 +44,182 @@
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
+            android:layout_gravity="left"
             android:columnCount="4">
 
             <Button
                 android:id="@+id/delete"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
 
-                android:text="@string/del" />
+                android:layout_height="wrap_content"
+                android:text="@string/del"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/delonechar"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/delonechar"
                 android:textSize="13dp" />
 
             <Button
                 android:id="@+id/percent"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
                 android:text="%"
-                android:textSize="13dp" />
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/division"
-                android:layout_width="100dp"
-                android:text="/" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_1"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="1" />
+                android:text="1"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_2"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="2" />
+                android:text="2"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_3"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="3" />
+                android:text="3"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/multyply"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
 
-                android:text="*" />
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_4"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="4" />
+                android:text="4"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_5"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="5" />
+                android:text="5"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_6"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="6" />
+                android:text="6"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/minus"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
 
-                android:text="-" />
+                android:layout_height="wrap_content"
+                android:text="-"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_7"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="7" />
+                android:text="7"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_8"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="8" />
+                android:text="8"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_9"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/oval_button"
-                android:text="9" />
+                android:text="9"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/plus"
-                android:layout_width="100dp"
-                android:text="+" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:textSize="12sp" />
 
 
             <Button
                 android:id="@+id/btn_0"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_columnSpan="2"
-                android:layout_gravity="fill"
 
-                android:text="0" />
+                android:layout_gravity="fill"
+                android:text="0"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_00"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
 
-                android:text="00" />
+                android:layout_height="wrap_content"
+                android:text="00"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btn_point"
-                android:layout_width="100dp"
-                android:text="." />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="."
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/equal"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_columnSpan="2"
                 android:layout_gravity="fill"
-                android:text="=" />
+                android:text="="
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/rightBr"
-                android:layout_width="100dp"
-                android:text="(" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="("
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/leftBr"
-                android:layout_width="100dp"
-                android:text=")" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=")"
+                android:textSize="12sp" />
 
         </GridLayout>
     </LinearLayout>
