--- a/app/src/main/res/layout/fragment_convertor.xml
+++ b/app/src/main/res/layout/fragment_convertor.xml
@@ -18,23 +18,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
             <Spinner
                 android:id="@+id/spinmain"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1" />
-
-            <Spinner
-                android:id="@+id/spinone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
 
         </LinearLayout>
 
@@ -76,46 +68,78 @@
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
-                        <EditText
-                            android:id="@+id/txta"
+                        <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:ems="10"
-                            android:hint="A"
-                            android:inputType="numberDecimal"
-                            android:visibility="invisible" />
+                            android:orientation="vertical">
 
-                        <EditText
-                            android:id="@+id/txtb"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:ems="10"
-                            android:hint="B"
-                            android:inputType="numberDecimal"
-                            android:visibility="invisible" />
+                            <EditText
+                                android:id="@+id/txtb"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:hint="B"
+                                android:inputType="numberDecimal"
+                                android:visibility="invisible" />
 
-                        <EditText
-                            android:id="@+id/txtc"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            <EditText
+                                android:id="@+id/txta"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:hint="A"
+                                android:inputType="numberDecimal"
+                                android:visibility="invisible" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:ems="10"
-                            android:hint="C"
-                            android:inputType="numberDecimal"
-                            android:visibility="invisible" />
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/from" />
+
+                            <Spinner
+                                android:id="@+id/spinone"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
+                                android:layout_weight="1" />
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/to" />
+
+                            <Spinner
+                                android:id="@+id/spintwo"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
+                                android:layout_weight="1" />
+                        </LinearLayout>
 
                     </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="9dp"
                     android:orientation="vertical">
 
